--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 StarShip Fighter_clone_0/
+StarShip Fighter_clone_1/
+StarShip Fighter_clone_2/
+StarShip Fighter_clone_3/
+StarShip Fighter_clone_4/
+StarShip Fighter_clone_5/
